<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.furkanmulayim.halkekmag.presentation.viewmodel.PostShareViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/status_bar_color"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.fragment.PostPaylasFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">



                <!--HEADER PANEL-->
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/backButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ok"
                        android:onClick="cancelPostShare" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tarih"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentDate}"
                            android:fontFamily="@font/inter_medium"
                            android:textColor="@color/text_700"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Halkekmag"
                            android:fontFamily="@font/inter_medium"
                            android:textColor="@color/text_100"
                            android:textSize="30sp" />
                    </LinearLayout>

                </LinearLayout>


                <!--PHOTO-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="375dp"
                    android:layout_height="468.75dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">


                    <!--    Linear Siyah   -->
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/sendPhoto"
                        android:layout_width="375dp"
                        android:layout_height="468.75dp"
                        android:background="@color/yellow_100"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/rounded_10" />

                    <!--    Linear Siyah   -->
                    <ImageView
                        android:id="@+id/selectButton"
                        android:layout_width="375dp"
                        android:layout_height="468.75dp"
                        android:background="@drawable/black_linear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/clickText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/click"
                    android:textAlignment="center"
                    android:textColor="@color/yellow_700"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="345dp"
                    android:layout_height="400dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-120dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <EditText
                        android:id="@+id/titleTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/yellow_100"
                        android:fontFamily="@font/inter_medium"
                        android:hint="@string/enter_title"
                        android:inputType="text"
                        android:textColor="@color/text_100"
                        android:textColorHint="@color/text_100"
                        android:textSize="35sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/location" />

                        <EditText
                            android:id="@+id/locationTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/text_700"
                            android:fontFamily="@font/inter_medium"
                            android:hint="@string/enter_location"
                            android:inputType="text"
                            android:textColor="@color/text_700"
                            android:textColorHint="@color/text_700"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/calendars" />

                        <EditText
                            android:id="@+id/dateTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/yellow_100"
                            android:fontFamily="@font/inter_medium"
                            android:hint="@string/enter_date"
                            android:inputType="text"
                            android:textColor="@color/text_100"
                            android:textColorHint="@color/text_100"
                            android:textSize="20sp" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/about"
                        android:textColor="@color/text_100"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/aboutTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/yellow_100"
                        android:fontFamily="@font/inter_medium"
                        android:hint="@string/enter_about"
                        android:inputType="textMultiLine|textCapSentences"
                        android:textColor="@color/text_100"
                        android:textColorHint="@color/text_100"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/shareButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/share_post"
                        android:textAllCaps="false"
                        android:textColor="@color/back_area" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </ScrollView>
</layout>
